--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4090",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,9 +19,11 @@
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "date-fns": "^2.28.0",
+    "material-ui-phone-number": "^3.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.32.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
