--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@mui/material": "^5.8.1",
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "cloudinary": "^1.30.0",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "material-ui-phone-number": "^3.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
