--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3090",
   "scripts": {
     "dev": "next dev -p 4090",
     "build": "next build",
@@ -21,7 +22,8 @@
     "cloudinary": "^1.30.0",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
-    "material-ui-phone-number": "^3.0.0",
+    "lodash": "^4.17.21",
+    "material-ui-phone-number-2": "^1.2.7",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -29,6 +31,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
