--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3090",
   "scripts": {
     "dev": "next dev -p 4090",
     "build": "next build",
@@ -10,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "7.18.6",
     "@date-io/date-fns": "1.x",
     "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.4.0",
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.84",
     "@mui/material": "^5.8.1",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@mui/styles": "5.9.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "cloudinary": "^1.30.0",
     "date-fns": "^2.28.0",
@@ -25,8 +26,8 @@
     "lodash": "^4.17.21",
     "material-ui-phone-number-2": "^1.2.7",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-hook-form": "^7.32.2",
     "styled-components": "^5.3.5"
   },
