--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/node": "17.0.35",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "eslint": "8.16.0",
