stashing git changes

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
 CLOUDINARY_URL=cloudinary://185787162153654:XGWYqBv8qFvXtIabWKturtP4FOo@cloudymessy
+COMPOSE_HTTP_TIMEOUT= 1200
